--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>WebView</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-Hello WebView world!
+    Hello WebView world!!!
 </body>
 </html>
